--- a/lab3/pyproject.toml
+++ b/lab3/pyproject.toml
@@ -1,17 +1,17 @@
 [tool.poetry]
-name = "lab2"
+name = "lab3"
 version = "0.1.0"
-description = "Compilation Principles lab 2"
+description = "Compilation Principles lab 3"
 authors = ["focused_xy <elpsycongroo242@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-graphviz = "^0.20.3"
 
-[tool.black]
-line-length = 88
-target-version = ['py38']
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.3"
+pytest-random = "^0.2"
 
 [build-system]
 requires = ["poetry-core"]
